fix text alignment on screen < 680

--- a/client/reader/discover/_style.scss
+++ b/client/reader/discover/_style.scss
@@ -71,7 +71,8 @@
 			position: static;
 			border: none;
 			padding: 0;
-			margin: 7px 6px 0;
+			vertical-align: text-bottom;;
+			margin: 0 6px;
 			color: lighten( $gray, 10% );
 			font-size: 13px;
 			line-height: 16px;
